# libtitanium

./: CMakeLists.txt  flake.nix
libtitanium/config/: config.cpp  config.hpp
libtitanium/dev/: tests.cpp  tests.hpp
libtitanium/filesystem/: filesystem.cpp  filesystem.hpp
libtitanium/gui/: gui_layout.cpp  gui_layout.hpp
libtitanium/imgui_widgets/: console.cpp  debugoverlay.cpp  resourceprofiler.cpp  widgets.hpp
libtitanium/input/: input_actions.cpp  input_actions.hpp  input_device.cpp  input_device.hpp  input_device_enum.cpp
libtitanium/jobsystem/: jobsystem.hpp
libtitanium/logger/: logger.cpp  logger.hpp
libtitanium/memory/: mem_core.cpp  mem_core.hpp  mem_external.cpp  mem_external.hpp
libtitanium/renderer/: renderer.hpp  renderer_command.cpp  renderer_device.cpp  renderer_helpers.cpp  renderer_helpers.hpp  renderer_main.cpp  renderer_stringify.cpp  renderer_target.cpp
libtitanium/renderer/renderer_old/: renderer.cpp  renderer_default_wgsl.hpp  renderer_device.cpp  renderer_object.cpp  renderer_resource.cpp  renderer_stringify.cpp  renderer_stringify.hpp
libtitanium/resource/: readbuf.cpp  readbuf.hpp  readbuf_source_file.cpp  resource.hpp  resource_resolve.cpp  resource_util.cpp
libtitanium/resource/filetype/: targa.cpp  targa.hpp
libtitanium/sys/: platform_sdl.cpp  platform_sdl.hpp  sdl_stringify.cpp  sdl_stringify.hpp
libtitanium/util/: assert.hpp  commandline.cpp  commandline.hpp  debug.hpp  decimal.hpp  defer.hpp  enum_flags.hpp  maths.cpp  maths.hpp  numerics.hpp  stacktrace.cpp  stacktrace.hpp  static_array.hpp  staticinitialise.hpp  string.cpp  string.hpp  template_constraints.hpp
libtitanium/util/data/: hashmap.hpp  hashmap_impl.inl  multitree.hpp  safereadbuf.hpp  safereadbufbasic_impl.inl  span.hpp  span_dynamic.hpp  span_dynamic_tests.cpp  stringbuf.hpp
